# gopptx

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.fuzz  LICENSE  PLANS.md  README.md  TODO.md  Taskfile.yml  editor_chart_smoke.pptx  editor_notes_smoke.pptx  go.mod  go.sum  hatch_build.py  mkdocs.yml  pip-audit-ignore.txt  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  sample_action_smoke.pptx  vulture_whitelist.py
.github/: dependency-review-config.yml
.github/workflows/: ci-quality-gates.yml  docs-pages.yml  license-check.yml  publish-pypi.yml  publish-testpypi.yml  release-go.yml  release.yml  semgrep.yml
bindings/c/: README.md  bridge.go
cmd/gen_ops/: main.go  main_test.go
cmd/gen_shape_types/: main.go  main_test.go
cmd/pptcli/: README.md  app.go  command_completion.go  command_create.go  command_export.go  command_export_png_nonwindows.go  command_export_png_windows.go  command_html.go  command_info.go  command_md2ppt.go  command_merge.go  command_pdf.go  command_repair.go  command_tpl.go  command_urlfetch.go  command_validate.go  command_version.go  exit_codes.go  fsutil.go  input_paths.go  input_paths_test.go  legacy_flags.go  main.go  main_test.go
cmd/test_native_pdf/: main.go
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md
docs/: api-reference.md  concepts.md  editing.md  examples-map.md  index.md  installation.md  library-comparison.md  ppt-rs-vs-gopptx-detailed.md  quickstart.md  requirements.txt  shapes_comparison.md  troubleshooting.md
docs/architecture/: batch_execute_envelope.md  bridge-phase1-ops.md  cbridge-guidance.md
docs/guides/: batch-execution.md  go-library.md  go-workflows.md  pptx-png-export.md  python-library.md  python-workflows.md
docs/reference/: bridge-operations.md  go-api.md  go-charts.md  go-export.md  go-hyperlinks.md  go-layout-helpers.md  go-metadata-export.md  go-notes-comments-sections.md  go-shapes.md  go-slides.md  go-tables.md  go-templates.md  go-text.md  python-presentation-api.md
docs/scripts/: build_usage_catalog.py  export-showcase-png.ps1  generate_s02_text_frame.py  refresh-usage-catalog.ps1  refresh-usage-s02.ps1
docs/showcase/: basic-generation.md  basic-usage.md  chart-radar.md  index.md  python-go-usage.md  rich-slide.md  text-styling.md
docs/styles/: monochrome.css
docs/use-cases/: automated-business-review.md  brand-reskinning.md  index.md
examples/: README.md  python_command_api_test.py  python_ctypes_demo.py  python_library_test.py
examples/01-basic-pptx-generation/: basic_gen.go  main.py
examples/02-slide-layouts/: main.go  main.py
examples/03-markdown-to-pptx/: main.go  main.py
examples/04-text-formatting/: main.py  text_enhancements.go  text_frame.go
examples/04-text-styling/: main.go  main.py
examples/05-bullet-styles/: main.go  main.py
examples/06-text-enhancements/: main.go  main.py
examples/07-tables/: main.go  main.py
examples/08-dynamic-report-generation/: main.py
examples/08-table-cell-merge/: main.go  main.py
examples/09-charts/: chart_smoke.go  main.py
examples/10-images/: main.go  main.py
examples/11-image-advanced-sources/: main.go  main.py
examples/12-shapes/: feature_showcase.go  feature_showcase_test.go  main.py
examples/13-connectors/: main.go  main.py
examples/14-table-api-improvements/: main.py  styling_example.py
examples/14-transitions/: main.go  main.py
examples/15-cli-commands/: main.go  main.py
examples/15-headers-footers/: main.py
examples/16-chart-type-enum/: main.py
examples/16-templates/: main.go  main.py
examples/17-custom-slide-layout-composition/: main.py
examples/17-themes/: main.py  theme_master_smoke.go
examples/18-layout-helpers/: main.go  main.py
examples/18-theme-aware-presentation/: main.py
examples/19-read-modify-existing/: editor_overwrite.go  editor_smoke.go  main.py
examples/22-speaker-notes/: main.py  (+1 more)
plans/: next_features.md  urlfetch-enhancements.md
reports/: table_parity_report.md
scripts/: README.md  build_cbridge.ps1  build_cbridge.sh  build_python.ps1  build_python.sh  fuzz.sh  generate_chart_smoke_samples.go
smoke_samples/: 01_basic_pptx.pptx  02_slide_layouts.pptx  03_markdown.pptx  04_placeholders.pptx  04_text_formatting.pptx  05_bullet_styles.pptx  06_text_enhancements.pptx  07_tables.pptx  08_table_cell_merge.pptx  09_charts.pptx  10_images.pptx  10_images_advanced.pptx  11_images_advanced.pptx  12_shapes.pptx  13_connectors.pptx  14_transitions.pptx  15_merge.pptx  16_prelude_helpers.pptx  18_layout_helpers.pptx  19_editor_base.pptx  19_editor_modified.pptx  19_read_modify.pptx  22_speaker_notes.pptx  28_animations.pptx  31_hyperlinks.pptx  37_complex_duplication.pptx  37_multi_template_duplication.pptx  37_slide_duplication.pptx  38_editor_image_stamping.pptx  39_modular_sections.pptx  48_accessibility.pptx  53_slide_properties.pptx  54_theme_master.pptx  55_background_fills.pptx  56_action_api.pptx  57_editor_overwrite_existing.pptx  animations.pptx  family1_bar_line_area_variants.pptx  family2_bubble.pptx  family3_radar.pptx  (+4 more)
tmp/: python_batch_latency_benchmark.json
todo/: 01-core-presentation.md  02-text.md  03-shapes.md  04-charts.md  05-tables.md  06-smartart.md  07-media.md  08-fonts.md  09-notes-security-properties.md  10-conversion-import-export.md  11-file-formats.md  12-advanced-limitations.md  13-quality-docs-dx.md  14-missing-text-features.md  15-missing-shape-features.md  16-missing-chart-features.md  17-missing-table-features.md  18-missing-images-media-features.md  19-missing-masters-layouts-themes-features.md  20-missing-advanced-unique-features.md  21-missing-core-presentation-management-features.md  22-missing-slide-operations-features.md  23-missing-shapes-advanced-operations-features.md  24-missing-text-formatting-features.md  25-missing-document-features.md  26-missing-export-features.md  27-gap-analysis-high-priority.md  28-gap-analysis-medium-priority.md  29-gap-analysis-low-priority.md  README.md
(+1827 files in other folders)
