[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopptx"
version = "0.1.0"
authors = [{ name = "djinn-soul" }]
description = "High-performance PPTX engine powered by Go"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["basedpyright>=1.23.0", "pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["python/gopptx"]

[tool.hatch.build.targets.sdist]
include = [
    "/python/gopptx",
    "/bindings/c",
    "/Taskfile.yml",
    "/go.mod",
    "/go.sum",
]

[tool.basedpyright]
include = ["python/gopptx"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
